# fabricaPainel_backEnd

./: .env-exemplo  README.md  docker-compose.yml  pyproject.toml
core/fabrica_painel/: admin.py  apps.py  signals.py
core/fabrica_painel/migrations/: 0001_initial.py  0002_initial.py  0002_remove_work_co_supervisor.py  0003_alter_ods_name_remove_work_ods_work_ods.py  0003_rename_team_students_team_team_student.py  0004_alter_assessments_registration.py  0004_alter_work_advisor_and_more.py  0004_alter_work_field.py  0005_alter_work_final_submission_work_date.py  0005_work_reject_submission_work_date.py  0006_work_status.py  0006_work_verification_token.py  0007_merge_20240711_1739.py  0008_alter_team_team_student.py  0009_alter_assessment_registration.py
core/fabrica_painel/models/: __init__.py  assessment.py  assessments.py  edition.py  field.py  keyword.py  ods.py  team.py  work.py
core/fabrica_painel/serializers/: __init__.py  assessment.py  assessments.py  edition.py  field.py  keyword.py  ods.py  team.py  work.py
core/fabrica_painel/signals/: __init__.py  email_work_info_to_advisor.py  signal_work_advisor_update.py  signal_work_delete.py  signal_work_update.py
core/fabrica_painel/use_case/: __init__.py  send_update_advisor_email_to_advisor.py  send_work_delete_email_to_student.py  send_work_email_to_advisor.py  send_work_email_to_student.py  send_work_update_to_advisor.py
core/send_email/: apps.py  signals.py  views.py
core/uploader/: views.py
core/usuario/: admin.py  models.py  router.py
django_project/: settings.py  urls.py
(+46 files in other folders)
